<resources>
    <string name="app_name">Easy Calculator</string>
    <string name="hint_input_number">input number</string>
    <string name="button_calc">calculate</string>
    <string name="calc_resut_text">=%1$d</string>
    <string name="calc_result_default">result</string>
    <string name="button_next">continue</string>
    <string name="title_another_calc">Calculating in another activity</string>
    <string name="button_back">return</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>
</resources>
