<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.sample.calculator.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="35dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/numberInput1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/primary_text_size"
                android:hint="@string/hint_input_number"
                android:inputType="number"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/calcButoon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_calc"
                android:layout_alignBaseline="@+id/numberInput1"
                android:layout_toEndOf="@+id/numberInput1"
                android:background="@drawable/button_background"
                android:textColor="#FFFFFF"/>

            <Spinner
                android:id="@+id/operationSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_alignEnd="@+id/numberInput1"
                android:layout_toStartOf="@+id/calcResult"
                android:layout_below="@+id/calcButoon1"
                android:entries="@array/operators"/>

            <EditText
                android:id="@+id/numberInput2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:ems="10"
                android:textSize="@dimen/primary_text_size"
                android:hint="@string/hint_input_number"
                android:inputType="number"
                android:layout_alignEnd="@+id/numberInput1"
                android:layout_below="@+id/operationSelector" />

            <Button
                android:id="@+id/calcButoon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_calc"
                android:layout_toEndOf="@+id/numberInput2"
                android:layout_alignTop="@+id/numberInput2"
                android:background="@drawable/button_background"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/calcResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/calc_result_default"
                android:textColor="#000000"
                android:textSize="@dimen/primary_text_size"
                android:layout_alignEnd="@+id/numberInput2"
                android:layout_below="@+id/numberInput2"
                tools:layout_editor_absoluteX="131dp" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/button_next"
                android:layout_alignEnd="@+id/calcButoon2"
                android:layout_below="@+id/calcResult"
                tools:layout_editor_absoluteX="245dp"
                android:background="@drawable/button_background"
                android:textColor="#FFFFFF"/>

        </RelativeLayout>
    </ScrollView>
</FrameLayout>
